# StateBudgetMem

./: .gitattributes  .gitignore  AGENTS.md  README.md  analyze_obsolete.py  analyze_obsolete_v2.py  demo.py  evaluation.py  evaluation_v2.py  memorybank.py  memorybank_v2.py  pyproject.toml  结构介绍README.md
StateBudgetMem/: CONTRIBUTING.md  pyproject.toml
StateBudgetMem/docs/: ARCHITECTURE.md  MIGRATION_FROM_THREE_BRANCHES.md  TEAM_WORKFLOW.md  implementation_plan_task001.md
StateBudgetMem/results/raw/: tfidf_topk_seed42_k3_20260629T074313Z.jsonl
StateBudgetMem/src/statebudgetmem/: interfaces.py
StateBudgetMem/src/statebudgetmem/baselines/: README.md  __init__.py
StateBudgetMem/src/statebudgetmem/baselines/memorybank/: README.md  __init__.py  datasets.py
StateBudgetMem/src/statebudgetmem/evaluation/: __init__.py  metrics.py
StateBudgetMem/src/statebudgetmem/routing/: __init__.py  prompts.py  router.py
StateBudgetMem/src/statebudgetmem/versioning/: README.md  models.py
StateBudgetMem/src/statebudgetmem/views/: README.md
StateBudgetMem/tests/integration/: test_preserved_assets.py
StateBudgetMem/tests/versioning/: test_graph_validator.py
StateBudgetMem/tools/routing/: debug_routing.py
configs/: baseline.yaml  contract_compare.yaml  fair_comparison_memorybank_statebudgetmem_v2.yaml  interface_smoke.yaml  memorybank_interface_smoke.yaml
data/: README.md
docs/: CODEX_TASK_001_BASELINE.md  MEMORY_SCHEMA_V1.md  StateBudgetMem_ondevice_MemoryBank_audit_20260711.md  StateBudgetMem_research_plan.md  UNIFIED_SPEC.md  budget_sweep_results_20260716.md  contract_test_guide.md  dual_views_analysis_20260717.md  experiment_conclusion_boundaries_20260717.md  fair_comparison_results_v2_20260718.md  fair_experiment_protocol.md  final_report_outline_20260717.md  (+8 more)
(+285 files in other folders)
