[project]
name = "statebudgetmem"
version = "0.1.0"
description = "Deterministic offline baseline for temporally consistent long-term memory experiments."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
